java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119b-hints.pass
Create field d in org.netbeans.test.java.hints.IncorrectType58119b
Create parameter d
Create local variable d
